Fix broken css in task output.

--- a/styles/sources/style.scss
+++ b/styles/sources/style.scss
@@ -499,7 +499,7 @@ div.taskOutput ul {
 	margin:0px 0px 0px 7px;
 }
 
-div.taskOutput li {
+div.taskOutput ul.pipes li {
 	list-style: none;
 	float:left;
 	padding:0px 2px 0px 2px;
